--- a/_includes/template/home/category.html
+++ b/_includes/template/home/category.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include modules/banner.html %}
 
-<div class="section" id="content">
+<div class="section {% cycle '', 'grey' %}" id="content">
   <div class="container">
     {{ content }}
     <br>
