--- a/_includes/template/home/contact.html
+++ b/_includes/template/home/contact.html
@@ -1,4 +1,4 @@
-<div class="section grey" id="{{ section.slug }}">
+<div class="section {% cycle '', 'grey' %}" id="{{ section.slug }}">
   <div class="container">
     <h3 class="h2 page-header">{{ section.title }}</h3>
     {{ section.content }}
