--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -1,4 +1,4 @@
-<div class="section grey" id="{{ include.page.slug }}">
+<div class="section {% cycle '', 'grey' %}" id="{{ include.page.slug }}">
   <div class="container">
     <h3 class="h2 page-header">{{ section.title }}</h3>
     <div class="row">
