squash! Merge branch 'gh-pages' of github.com:abeta/10kboxing into gh-pages

--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -446,3 +446,12 @@ body .don-share {
     background-color: #3f729b;
 }
 
+
+.nobanner {
+    padding-top: 80px;
+}
+@media (min-width:768px) {
+    .nobanner {
+        padding-top: 110px;
+    }
+}
