--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<br><br><br><br><br>
-<div class="section" id="content">
+<div class="section nobanner" id="content">
   <div class="container">
     
     <div class="row">
