squash! Merge branch 'gh-pages' of github.com:abeta/10kboxing into gh-pages

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -54,7 +54,7 @@ layout: default
         
       </div>
       <div class="col-sm-5">
-        <div class="panel panel-default">
+        <div class="panel panel-default" id="basket">
           <div class="panel-heading">
             <h3 class="panel-title">Basket</h3>
           </div>
