squash! Rename _content/privacy-policy.html to _content/privacy.html

--- a/_includes/template/home/home.html
+++ b/_includes/template/home/home.html
@@ -1,6 +1,6 @@
 <div class="section {% cycle '', 'grey' %}" id="{{ section.slug }}">
   <div class="container">
-    <h3 class="h2 page-header">{{ section.title }}</h3>
+    <a class="btn btn-primary btn-lg pull-right" href="http://fight.10kboxing.com/">Fight for 10K!</a>
     {{ section.content }}
   </div>
 </div>
