--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,16 +9,16 @@
     <link rel="icon" href="{{ site.url }}/favicon.ico" />
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html' }}"/>
     <title>{{ page.title }} | {{ site.title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href="{{site.url}}/assets/css/style.css?{{ site.v }}" rel="stylesheet" />
+    <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href="/assets/css/style.css?{{ site.v }}" rel="stylesheet" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{site.url}}/assets/ie10-viewport-bug-workaround.js"></script>
+    <script src="/assets/ie10-viewport-bug-workaround.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:description" content="{{ description }}" />
     <meta property="og:image" content="{{ image }}" />
@@ -27,12 +27,12 @@
     <meta property="og:locale" content="{{ site.locale }}"/>
     <meta property="og:url" content="{{ site.url }}{{ page.url | remove:"index" | remove:".html" }}" />
     {% if site.facebook_app %}<meta property="fb:app_id" content="{{ site.facebook_app }}" />{% endif %}
-    
+
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@{{ site.twitter }}"/>
     <meta name="twitter:domain" content="{{ site.url }}"/>
     <meta name="twitter:creator" content="@{{ site.twitter }}"/>
-    
+
   </head>
   <body data-spy="scroll" data-target=".navbar-inverse" data-offset="100">
   <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
@@ -44,15 +44,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button> 
+        </button>
          <a class="navbar-brand brand-small" href="{{site.url}}">
           <img src="{{site.url}}/assets/logo.png" alt="{{ site.title }}" id="logo" />
         </a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        
-        {% assign pages = (site.content | where: 'published', 1 | where: 'parent', nil | sort: 'order') %}
+
+        {% assign pages = (site.content | where: 'published', 1 | sort: 'order') %}
         {% for item in pages %}
           <li {% if item.slug == page.slug or page.collection == item.slug or page.app == item.slug %}class="active"{% endif %}>
             <a href="{% unless page.slug == 'index' %}{{ site.url }}/{% endunless %}#{{ item.slug }}">
@@ -60,14 +60,14 @@
             </a>
           </li>
         {% endfor %}
-        
+
         </ul>
       </div>
       <!--/.nav-collapse -->
     </div>
   </div>
   {{content}}
-  
+
   <footer>
     <div class="container">
       <ul class="nav navbar-nav navbar-right">
@@ -78,6 +78,6 @@
       <div class="footer-left">&copy; {{ site.time | date: '%Y' }} {{ site.title }} • Web design by ABE Media <!--a href="/sitemap">Sitemap</a--></div>
     </div>
   </footer>
-  <script src="{{site.url}}/assets/js/scripts.js?{{ site.v }}"></script>
+  <script src="/assets/js/scripts.js?{{ site.v }}"></script>
 </body>
 </html>
