--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html' }}"/>
     <title>{{ page.title }} | {{ site.title }}</title>
     <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href="/assets/css/style.css?{{ site.v }}" rel="stylesheet" />
+    <link href="/assets/css/app.css?{{ site.v }}" rel="stylesheet" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/assets/ie10-viewport-bug-workaround.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
