--- a/_includes/template/home/contact.html
+++ b/_includes/template/home/contact.html
@@ -2,34 +2,34 @@
   <div class="container">
     <h3 class="h2 page-header">{{ section.title }}</h3>
     {{ section.content }}
-    <form role="form" action="https://mailer.abemedia.co.uk" method="post" id="contactForm">
+    <form role="form" action="https://send.abemedia.co.uk/Zn" method="post" id="contactForm">
       <div class="row">
         <div class="col-sm-7">
           <div class="row">
             <div class="form-group col-sm-6">
               <label for="subject">Subject *</label>
-              <input type="text" class="form-control" name="subject" required>
+              <input type="text" class="form-control" id="subject" name="subject" required>
             </div>
             <div class="form-group col-sm-6">
               <label for="name">Name *</label>
-              <input type="text" class="form-control" name="name" required>
+              <input type="text" class="form-control" id="name" name="name" required>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-sm-6">
               <label for="email">Email *</label>
-              <input type="email" class="form-control" name="email" required>
+              <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <div class="form-group col-sm-6">
-              <label for="telephone">Telephone</label>
-              <input type="tel" class="form-control" name="extra[telephone]">
+              <label for="phone">Telephone</label>
+              <input type="tel" class="form-control" id="phone" name="phone">
             </div>
           </div>
         </div>
         <div class="col-sm-5">
           <div class="form-group">
             <label for="message">Message *</label>
-            <textarea name="message" class="form-control" style="height:122px" required></textarea>
+            <textarea id="message" name="message" class="form-control" style="height:122px" required></textarea>
           </div>
           <div class="form-group text-right">
             <button type="submit" class="btn btn-danger btn-lg">Send Enquiry</button>
