--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -61,12 +61,11 @@ layout: default
             </table>
           </div>
         </div>
-        
+
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">Book {{ page.title | split: ' ' | first }}</h3></div>
           <div class="panel-body">
-            <form role="form" action="https://mailer.abemedia.co.uk" method="post" id="contactForm">
-              <input type="hidden" name="subject" value="Book {{ page.title }} (Model)">
+            <form role="form" action="https://send.abemedia.co.uk/0m" method="post" id="contactForm">
               <div class="form-group">
                 <label for="name">Name *</label>
                 <input type="text" class="form-control" name="name" required>
@@ -77,11 +76,12 @@ layout: default
               </div>
               <div class="form-group">
                 <label for="telephone">Telephone</label>
-                <input type="tel" class="form-control" name="extra[telephone]">
+                <input type="tel" class="form-control" name="phone">
               </div>
               <div class="form-group">
                 <button type="submit" class="btn btn-danger btn-lg btn-block">Send Enquiry</button>
               </div>
+              <input type="hidden" name="talent" value="{{ page.title }} (Model)">
             </form>
           </div>
         </div>
