--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -80,7 +80,7 @@ layout: default
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">Book {{ page.title | split: ' ' | first }}</h3></div>
           <div class="panel-body">
-            <form role="form" action="https://send.abemedia.co.uk/0m" method="post" id="contactForm">
+            <form role="form" action="https://send.abemedia.co.uk/0m" method="post" class="donforms">
               <div class="form-group">
                 <label for="name">Name *</label>
                 <input type="text" class="form-control" name="name" required>
